# flask-rag-service

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml
flask_rag_service/: __init__.py  auth.py  config.py  models.py  tasks.py  views.py
flask_rag_service/templates/: index.html  login.html
tests/: conftest.py  test_setup.py  test_tasks.py  test_views.py
